@@ -5,10 +5,13 @@
     <tr>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'boards.name', 'Name', 'boards_search') %></th>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'boards.project_id', 'Project', 'boards_search') %></th>
+<% if false %>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'boards.start_date', 'Start Date', 'boards_search') %></th>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'boards.end_date', 'End Date', 'boards_search') %></th>
+<% end %>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'boards.user_id', 'Creator', 'boards_search') %></th>
       <th>Description</th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'boards.archived', 'Archived', 'boards_search') %></th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -17,10 +20,13 @@
     <tr>
       <td><%= link_to board.name, board %></td>
       <td><%= link_to board.project.name, board.project %></td>
+<% if false %>
       <td><%= simple_date board.start_date %></td>
       <td><%= simple_date board.end_date %></td>
+<% end %>
       <td><%= link_to board.user.name, board.user %></td>
       <td><%= board.description %></td>
+      <td><%= simple_check board.archived %></td>
       <td>
         <% if current_user.all_boards.include?(board) %>
           <%= link_to "Edit", edit_board_path(board), class: 'btn btn-mini' %>
