@@ -24,30 +24,43 @@
       <%= f.text_field :name %>
     </div>
   </div>
+
   <div class="control-group">
     <%= f.label :project_id, class: 'control-label' %>
     <div class="controls">
       <%= f.select :project_id, options_for_select([['---', nil]] + current_user.all_projects.by_favorite(current_user.id).order("(favorite IS NULL or favorite = '0') ASC, name").collect{|p| [p.name, p.id]}, @board.project_id) %>
     </div>
   </div>
+
   <div class="control-group">
     <%= f.label :description, class: 'control-label' %>
     <div class="controls">
       <%= f.text_area :description, rows: 7, style: 'width:95%' %>
     </div>
   </div>
+
+  <div class="control-group">
+    <%= f.label :archived, class: 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :archived %>
+    </div>
+  </div>
+
+<% if false %>
   <div class="control-group">
     <%= f.label :start_date, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :start_date, class: 'datepicker', value: @board.start_date ? @board.start_date.strftime('%m/%d/%Y') : '' %>
     </div>
   </div>
+
   <div class="control-group">
     <%= f.label :end_date, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :end_date, class: 'datepicker', value: @board.end_date ? @board.end_date.strftime('%m/%d/%Y') : '' %>
     </div>
   </div>
+<% end %>
 
   <div class="form-actions">
     <%= f.submit nil, class: 'btn btn-primary' %>
