@@ -6,7 +6,10 @@
 <%= label_tag :group_board_id, 'Board', class: 'control-label' %>
 <div class="controls">
   <% if @project_id %>
-    <%= select_tag :group_board_id, options_for_select([['Holding Pen', nil]] + boards.order('boards.end_date desc').collect{|f| [f.project.name + ": " + f.name + ' - ' + f.short_time, f.id]}, params[:board_id] ), name: 'board_id' %>
+    <% board_groups = [] %>
+    <% board_groups << ["Current", boards.where(archived: false).natural_sort] if boards.where(archived: false).size > 0 %>
+    <% board_groups << ["Archived", boards.where(archived: true).natural_sort] if boards.where(archived: true).size > 0 %>
+    <%= select_tag :group_board_id, options_for_select([['Holding Pen', nil]]) + grouped_options_for_select(board_groups, params[:board_id]), name: 'board_id' %>
   <% else %>
     <%= hidden_field_tag :group_board_id, nil, name: 'board_id' %>
   <% end %>
